--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: data-analyst-agent
+    name: data-analyst-agent-v2
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt"
@@ -9,4 +9,4 @@ services:
       - key: GENAI_API_KEY
         sync: false
       - key: PYTHON_VERSION
-        value: 3.10.1
+        value: 3.10.13
